# adventofcode2025

./: .gitignore  pyproject.toml  requirements.txt
day1/: day1-2.py  day1.py  genai.py
day2/: day2-2.py  day2.py  genai.py
day3/: day3-2.py  day3.py
day4/: day4-2.py  day4.py
day5/: day5-2.py  day5.py
day6/: day6-2.py  day6.py
day7/: day7-2.py  day7.py
day8/: day8-2.py  day8.py
day9/: day9-2.py  day9.py
